-feature#4239: On "Graph Utility View" add the name of and a link to the graph template which the graph is based on
-feature#4417: Remote Pollers - Support execution of custom functions at poller bottom
-feature#4638: Detect the graph with stale rrd or missing rrd
-feature#4762: Allow Package Import to be selective
-feature#4967: Make adding Associated Graph Templates and Data Queries easier to use
-feature#4786: Windows install does not support SVG rendering
-feature#4820: When importing, make it possible to only import certain components
-feature#4841: Move the cactid function db_check_reconnect() to lib/database.php for other service oriented scripts
-feature#4874: Add support for showing business hours
-feature#4890: Add multi threading for Poller rechace script
-feature#4899: Pass poller status to script_server to avoid connecting to the main database when offline or in recovery
-feature#4901: Make the script server accept arguments in the standard way
-feature#4902: Updated Support for MySQL 8.x
-feature#4907: Add lmSensors to the Net-SNMP Device Template
-feature#4926: Allow the user to override Cacti auto-client time zone detection
-feature#4943: Add ability to periodically check RRDfiles for errors in batch
-feature#4948: When using proxies to load balance Cacti, if the proxy cookie times out, Cacti should properly redirect
-feature#4955: Provide Common Sense Memory Tuning based upon MySQL Tuner Recommendations
-feature#4956: The function db_check_reconnect() should be able to work with any connection
-feature#4957: Add Device Template Classes to match the Classes in Upcoming release of the Package Plugin
-feature#4989: Cache Cacti 'Total Rows' by Hash to Improve Performance
-feature: Upgrade billboard.js to version 3.6
-feature: Upgrade jQuery to version 3.6.1
-feature: Upgrade jQueryUI to version 1.13.2

1.2.22
-security#4834: When creating new graphs, cross site injection is possible