@@ -47,6 +47,7 @@ Cacti CHANGELOG
 -feature#4239: On "Graph Utility View" add the name of and a link to the graph template which the graph is based on
 -feature#4417: Remote Pollers - Support execution of custom functions at poller bottom
 -feature#4638: Detect the graph with stale rrd or missing rrd
+-feature#4754: The script ss_fping.php should timeout based upon the actual device if its searchable
 -feature#4762: Allow Package Import to be selective
 -feature#4967: Make adding Associated Graph Templates and Data Queries easier to use
 -feature#4786: Windows install does not support SVG rendering
